--- a/configs.json
+++ b/configs.json
@@ -1,7 +1,7 @@
 
 {
   "ignore_social":true,
-  "obey_robots_file":true,
+  "obey_robots":true,
   "user_agent":"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36",
   "export_format":"csv",
   "show_log":false
