--- a/broken_links_app/scrapy.cfg
+++ b/broken_links_app/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = broken_links.settings
+default = broken_links_app.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = broken_links
+project = broken_links_app
