--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 description = ""
 authors = ["Benzaoui Soufiane"]
 
-# packages = [{include = "broken_links_app"}]
+packages = [{include = "broken_links_app"}]
 [tool.poetry.dependencies]
 python = "^3.7"
 scrapy = "^1.8"
 fire = "0.2.1"
+pytest-twisted = "^1.12"
 
 
 
