--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - 3.8
+  - 3.7
 
 install:
   - curl -OsSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py
@@ -9,5 +9,5 @@ install:
   - poetry install
 
 script:
-  - poetry run tox
+  - poetry run pytest
 
